--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "opaque-wasm"
-version = "2.1.0"
-authors = ["Marcin Lazar <marcin.lazar@pm.me>", "Hawkheart", "r0kk3rz"]
-edition = "2018"
-repository = "https://github.com/marucjmar/opaque-wasm"
+version = "3.0.0"
+authors = ["Ch-iron <cch7264@gmail.com>"]
+edition = "2021"
+repository = "https://github.com/Ch-iron/opaque-wasm"
 keywords = ["cryptography", "crypto", "opaque", "passwords", "authentication", "wasm", "js", "browser", "webassembly", "node", "wasm-pack", "bindgen", "wasm-bindgen"]
 description = "An implementation of the OPAQUE key exchange protocol in WASM(WebAssembly)"
 
@@ -17,14 +17,14 @@ server = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
-opaque-ke = { version = "2", features = ["argon2"] }
+opaque-ke = { version = "3", features = ["argon2"] }
 rand = { version = "0.8.3" }
 getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }
-p256 = { version = "0.11", default-features = false, features = [
+p256 = { version = "0.13.2", default-features = false, features = [
   "hash2curve",
   "voprf",
 ] }
-argon2 = "0.4"
+argon2 = "0.5"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
